--- a/BlazorLab.Wasm/Views/DetailsView.razor
+++ b/BlazorLab.Wasm/Views/DetailsView.razor
@@ -1,4 +1,5 @@
 ﻿@using BlazorLab.MyLib.ViewModels
+@inject NavigationManager NavigationManager
 @inject IDetailsViewModel detailsViewModel
 <h3>DetailsView</h3>
 @if (detailsViewModel.TheList.Count == 0)
@@ -23,7 +24,11 @@ else {
         }
     </tbody>
 </table>
+<button @onclick="GoToCounter">Ga naar counter</button>
 }
 @code {
-
+    void GoToCounter()
+    {
+        NavigationManager.NavigateTo("/counter");
+    }
 }
